<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ContactUsScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/_2sdp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp" />

    <RelativeLayout
        android:id="@+id/rl_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        android:elevation="@dimen/_5sdp">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_app_bar">


        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_uploadImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/tcp" />

            <RelativeLayout
                android:id="@+id/rl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_uploadImage">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/clientname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiledtname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        app:textInputLayoutFocusedRectEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_name"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilMobile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/mobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiledtContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        app:textInputLayoutFocusedRectEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_mobile"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiledtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        app:textInputLayoutFocusedRectEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_email"
                android:layout_marginTop="@dimen/_10sdp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPostComment"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiledtPostComment"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:gravity="top"
                        android:hint="@string/message"
                        app:textInputLayoutFocusedRectEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/btn_contactus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/rl_comment"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/tab_back"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>